# pipeline-studio

./: .gitignore  .gitleaks.toml  .trivyignore  01-framework-catalog.html  02-pipeline-schema.html  03-stage-types.html  04-tool-catalog.html  05-invariants.html  06-industry-schema.html  07-canada-schema.html  08-canada-market.html  09-linux-distros.html  10-linux-compliance.html  11-dockerfile-catalog.html  12-compliance-variations.html  13-pipeline-build-catalog.html  14-canada-industry-catalog.html  15-version-registry.html  16-maintainability-runbook.html  17-feature-matrix.html  18-service-status.html  19-cluster-setup.html  21-build-axes.html  24-debugging.html  AUDIT.md  AUDIT_PROCESS.md  DECISIONS.md  INVARIANTS.md  PLATFORM.md  README.md  REFACTOR_PLAN.md  astro.config.mjs  catalog-info.yaml  cliff.toml  design-docs.html  index.html  mkdocs.yml  package-lock.json  package.json  renovate.json  (+5 more)
.github/: CODEOWNERS  (+2 more)
services/20-actix-web/: .env.example  Cargo.toml  Dockerfile  catalog-info.yaml  docker-compose.yml  mkdocs.yml
services/20-actix-web/.github/workflows/: 03-build-pr.yml  04-build-push-sign.yml  07-notify.yml
services/20-actix-web/compliance/: fedramp.yaml  fips.yaml  hipaa.yaml  pci.yaml  pipeda.yaml
services/20-actix-web/docs/: index.md
services/20-actix-web/helm/: Chart.yaml  values.dev.yaml  values.prod.yaml  values.staging.yaml  values.yaml
services/20-actix-web/helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  service.yaml  serviceaccount.yaml
services/20-actix-web/kustomize/base/: deployment.yaml  kustomization.yaml  service.yaml
services/20-actix-web/src/: main.rs
services/20-actix-web/src/auth/: jwt.rs  middleware.rs
services/20-actix-web/src/db/: mod.rs
services/20-actix-web/src/routes/: auth.rs  users.rs
services/20-axum/: .dockerignore  .env.example  Cargo.toml  Dockerfile  catalog-info.yaml  docker-compose.yml  mkdocs.yml
services/20-axum/.github/workflows/: 04-build-push-sign.yml
services/20-axum/compliance/: pipeda.yaml
services/20-axum/docs/: index.md
services/20-axum/helm/: values.prod.yaml  values.yaml
services/20-axum/helm/templates/: _helpers.tpl  hpa.yaml  ingress.yaml  poddisruptionbudget.yaml
services/20-axum/kustomize/base/: kustomization.yaml  service.yaml
services/20-axum/migrations/: 001_create_users.sql
services/20-axum/src/: errors.rs  lib.rs  main.rs
services/20-axum/src/routes/: users.rs
services/27-crow/: .env.example  CMakeLists.txt  Dockerfile  catalog-info.yaml  docker-compose.yml  mkdocs.yml
services/27-crow/.github/workflows/: 03-build-pr.yml  04-build-push-sign.yml
services/27-crow/compliance/: fedramp.yaml  fips.yaml  hipaa.yaml  pci.yaml  pipeda.yaml
services/27-crow/docs/: index.md
services/27-crow/helm/: Chart.yaml  values.dev.yaml  values.prod.yaml  values.staging.yaml  values.yaml
services/27-crow/helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  service.yaml  serviceaccount.yaml
services/27-crow/kustomize/base/: deployment.yaml  kustomization.yaml  service.yaml
services/27-crow/src/: auth.hpp  db.cpp  db.hpp  logger.hpp
services/27-drogon/: .env.example  CMakeLists.txt  Dockerfile  catalog-info.yaml  docker-compose.yml  mkdocs.yml
services/27-drogon/.github/workflows/: 03-build-pr.yml  04-build-push-sign.yml
services/27-drogon/compliance/: fedramp.yaml  fips.yaml  hipaa.yaml  pci.yaml  pipeda.yaml
services/27-drogon/docs/: index.md
services/27-drogon/helm/: Chart.yaml  values.dev.yaml  values.prod.yaml  values.staging.yaml  values.yaml
services/27-drogon/helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  service.yaml  serviceaccount.yaml
services/27-drogon/kustomize/base/: deployment.yaml  kustomization.yaml  service.yaml
services/27-drogon/src/: auth.cpp
services/28-rust-grpc/: .env.example  Cargo.toml  Dockerfile  catalog-info.yaml  docker-compose.yml  mkdocs.yml
services/28-rust-grpc/compliance/: fedramp.yaml  fips.yaml  hipaa.yaml  pci.yaml  pipeda.yaml
services/28-rust-grpc/docs/: index.md
services/28-rust-grpc/helm/: Chart.yaml  values.dev.yaml  values.prod.yaml  values.staging.yaml  values.yaml
services/28-rust-grpc/helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  service.yaml  serviceaccount.yaml
services/28-rust-grpc/kustomize/base/: deployment.yaml  kustomization.yaml  service.yaml
services/28-rust-grpc/migrations/: 002_create_items.sql
services/28-rust-grpc/src/: main.rs
services/28-rust-grpc/src/auth/: jwt.rs  middleware.rs
services/28-rust-grpc/src/db/: mod.rs
services/29-async-graphql/: .env.example  Cargo.toml  Dockerfile  catalog-info.yaml  docker-compose.yml  mkdocs.yml
services/29-async-graphql/.github/workflows/: 07-notify.yml
services/29-async-graphql/compliance/: fedramp.yaml  fips.yaml  hipaa.yaml  pci.yaml  pipeda.yaml
services/29-async-graphql/docs/: index.md
services/29-async-graphql/helm/: Chart.yaml  values.dev.yaml  values.prod.yaml  values.staging.yaml  values.yaml
services/29-async-graphql/src/: main.rs
services/30-ws-rust/: .env.example  Cargo.toml  Dockerfile  catalog-info.yaml  docker-compose.yml  mkdocs.yml
services/30-ws-rust/compliance/: fedramp.yaml  fips.yaml  hipaa.yaml  pci.yaml  pipeda.yaml
services/30-ws-rust/docs/: index.md
services/30-ws-rust/helm/: Chart.yaml  values.dev.yaml  values.prod.yaml  values.staging.yaml  values.yaml
services/30-ws-rust/src/: main.rs
services/api-axum/: .pre-commit-config.yaml  Cargo.toml  Dockerfile  docker-compose.yml
services/api-axum/compliance/: fedramp.yaml  fips.yaml  hipaa.yaml  pci.yaml
services/api-axum/helm/: Chart.yaml  values.dev.yaml  values.prod.yaml  values.staging.yaml
services/api-axum/src/: compliance.rs  extract.rs  lib.rs  main.rs  metrics.rs
services/api-axum/tests/: auth_test.rs  compliance_test.rs  invariants.rs  users_test.rs
(+4652 files in other folders)
