[package]
name = "svc-20-actix-web"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "20-actix-web"
path = "src/main.rs"

[dependencies]
actix-web   = "4.9"
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1",   features = ["macros", "rt-multi-thread"] }
dotenvy     = "0.15"
chrono      = { version = "0.4", features = ["serde"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus  = { version = "0.13", features = ["process"] }
env_logger  = "0.11"
futures     = "0.3"

# ORM / DB
sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio", "macros"] }

# Auth
jsonwebtoken = "9"
uuid         = { version = "1", features = ["v4", "serde"] }

# GitHub OAuth HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
actix-web = { version = "4.9", features = ["macros"] }
