[package]
name = "axum-service"
version = "1.0.0"
edition = "2021"

# Explicit lib name used in integration tests: use axum_service::...
[lib]
name = "axum_service"
path = "src/lib.rs"

[[bin]]
name = "axum-service"
path = "src/main.rs"

[dependencies]
axum          = "0.8"
serde         = { version = "1",   features = ["derive"] }
serde_json    = "1"
tokio         = { version = "1",   features = ["macros", "rt-multi-thread"] }
tower         = { version = "0.5", features = ["limit", "util"] }
tower-http    = { version = "0.6", features = ["trace"] }
dotenvy       = "0.15"
chrono        = { version = "0.4", features = ["serde"] }
tracing       = "0.1"

# JSON structured logging
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry — guarded by OTEL_ENABLED=true
opentelemetry       = { version = "0.24", features = ["trace"] }
opentelemetry-otlp  = { version = "0.17", features = ["grpc-tonic"] }
opentelemetry_sdk   = { version = "0.24", features = ["rt-tokio"] }

# OpenAPI docs via utoipa
utoipa              = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui   = { version = "7", features = ["axum"] }

# ORM / DB
sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio", "macros"] }

# Auth
jsonwebtoken = "9"
uuid         = { version = "1",   features = ["v4", "serde"] }

# GitHub OAuth — HTTP client used in auth/callback
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
http-body-util   = "0.1"
axum             = { version = "0.8", features = ["macros"] }
