[package]
name = "svc-28-rust-grpc"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "28-rust-grpc"
path = "src/main.rs"

[dependencies]
tonic = { version = "0.11", features = ["transport"] }
tonic-health = "0.11"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = { version = "0.13", features = ["process"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
