[package]
name = "svc-30-ws-rust"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "30-ws-rust"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = { version = "0.13", features = ["process"] }
serde_json = "1"
